additions to html and javascript

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <title>CSS Box Styling</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
   <body>
     <header>
-      <div class= "large-font">Word Guess Game</div>
+      <div class= "large-font">Code Quiz</div>
       <button class="start-button">Start</button>
     </header>
 
     <main>
       <section>
-        <div class="card word-guess">
-          <div class="large-font word-blanks">J _ v _ S c r_ _t</div>
+        <div class="card">
+          <div class="large-font questions">Question 1:</div>
+          <div class="answers">A. B. C. D.</div>
         </div>
       </section>
 
